<resources>
    <string name="app_name">Jackdaw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_menu_button">Playlist menu button</string>
    <string name="music_menu_button">Music menu button</string>
    <string name="search_menu_button">Search menu button</string>
    <string name="album_artwork">Album Artwork</string>
    <string name="play_pause_button">Play Pause Button</string>
    <string name="music_name">Music Name</string>
    <string name="skip_previous">Skip Previous</string>
    <string name="skip_next">Skip Next</string>
    <string name="shuffle_songs">shuffle songs</string>
    <string name="loop_current_song">loop current song</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="_64_songs">64 songs</string>
    <string name="menu_button">menu button</string>
    <string name="Create_a_new_playlist">Create a new playlist</string>
    <string name="playlist_title">Playlists</string>
    <string name="playlist_album_art">Playlist album art</string>
    <string name="Slide_down">Slide down</string>
    <string name="song_name">Song name</string>
    <string name="_00_00">00:00</string>
</resources>