<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/play_list_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_name"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/album_art_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/album_art_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/album_artwork"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/albumart" />

        <TextView
            android:id="@+id/music_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/music_name"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/music_seekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/album_art_imageView"
            app:layout_constraintVertical_bias="0.7" />

        <SeekBar
            android:id="@+id/music_seekBar"
            style="@android:style/Widget.DeviceDefault.Light.SeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/play_pause_imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/current_play_time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/_00_00"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/play_pause_imageButton"
            app:layout_constraintStart_toStartOf="@+id/music_seekBar"
            app:layout_constraintTop_toBottomOf="@+id/music_seekBar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/song_duration_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/_00_00"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/play_pause_imageButton"
            app:layout_constraintEnd_toEndOf="@+id/music_seekBar"
            app:layout_constraintTop_toBottomOf="@+id/music_seekBar"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/play_pause_imageButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ic_baseline_play_circle_filled_24"
            android:contentDescription="@string/play_pause_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/skip_previous_imageButton"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/skip_previous_imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_baseline_skip_previous_24"
            android:contentDescription="@string/skip_previous"
            app:layout_constraintBottom_toBottomOf="@+id/play_pause_imageButton"
            app:layout_constraintEnd_toStartOf="@+id/play_pause_imageButton"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play_pause_imageButton" />

        <ImageButton
            android:id="@+id/skip_next_imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_baseline_skip_next_24"
            android:contentDescription="@string/skip_next"
            app:layout_constraintBottom_toBottomOf="@+id/play_pause_imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@+id/play_pause_imageButton"
            app:layout_constraintTop_toTopOf="@+id/play_pause_imageButton" />

        <ImageButton
            android:id="@+id/shuffle_imageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_shuffle_24"
            android:contentDescription="@string/shuffle_songs"
            app:layout_constraintBottom_toBottomOf="@+id/skip_previous_imageButton"
            app:layout_constraintEnd_toStartOf="@+id/skip_previous_imageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/skip_previous_imageButton" />

        <ImageButton
            android:id="@+id/loop_imageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_loop_24"
            android:contentDescription="@string/loop_current_song"
            app:layout_constraintBottom_toBottomOf="@+id/skip_next_imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/skip_next_imageButton"
            app:layout_constraintTop_toTopOf="@+id/skip_next_imageButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>